<resources>
    <string name="app_name">Jobify</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="university">University</string>
    <string name="department">Department</string>
    <string name="class_of">Class of</string>
    <string name="gpa">GPA</string>
    <string name="skills">Skills</string>
    <string name="dummy_text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</string>
    <string name="profile">Profile</string>
    <string name="explore">Explore</string>
    <string name="setting">Setting</string>
    <string name="meetups">Meetups</string>
    <string name="search">Search</string>
    <string name="all">All</string>
    <string name="jobs">Jobs</string>
    <string name="organization">Organization</string>

    <string name="org">Org</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="unfollow">Unfollow</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="freshjobs">FreshJobs</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign up</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="username">Username</string>
    <string name="next">Next</string>
    <string name="step_1">Step 1</string>
    <string name="step_2">Step 2</string>


    <string name="text">text</string>
    <string name="textEmailAddress">textEmailAddress</string>
    <string name="phone">phone</string>
    <string name="number">number</string>
    <string name="editProfile">Edit profile</string>
    <string name="select_photo_from">Select photo from</string>
    <string name="select_destination">Select destination</string>
    <string name="deadline">Deadline</string>
    <string name="open_spots">Open Spots</string>
    <string name="where">Where</string>
    <string name="when">When</string>
    <string name="hosted_by">Hosted by</string>
    <string name="gender">Gender</string>
    <string name="filter">Filter</string>
    <string name="sallery">Sallery</string>


    <string-array name="possiblegender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="recent_jobs">Jobs</string>
    <string name="meet_ups">Meet ups</string>
    <string name="location">Location</string>
    <string name="salary">Salary</string>
    <string name="noresultfound">0 result found</string>


</resources>
