<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/profile_fragment_dest"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/exploreFragment"
            android:icon="@drawable/ic_search"
            android:title="@string/explore" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/setting" />
    </group>


</menu>
